--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ title                    : "Project 45102"
 title_separator          : "-"
 name                     : "byeongheon kang"
 description              : "Boys be ambitious."
-url                      : "https://byeongheon.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://ariels1996.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
