--- a/_config.yml
+++ b/_config.yml
@@ -11,20 +11,16 @@
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
 # theme                  : "minimal-mistakes-jekyll"
-
-remote_theme           : mmistakes/minimal-mistakes
-
+remote_theme           : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
-
-
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Project 45102"
+title                    : "Site Title"
 title_separator          : "-"
-name                     : "byeongheon kang"
-description              : "Boys be ambitious."
-url                      : "https://ariels1996.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : "Your Name"
+description              : "An amazing website."
+url                      : "https://byeongheon.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
