--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt
 locale                   : "ko"
 title                    : "Project 45102"
 title_separator          : "-"
-name                     : "Byeongheon Kang"
-description              : "Boys be ambitious."
+name                     : "ByeongHeon Kang"
+description              : "개발에 익숙하지 않은 학생"
 url                      : "https://ariels1996.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
