--- a/_config.yml
+++ b/_config.yml
@@ -293,3 +293,10 @@ defaults:
       comments: true
       share: true
       related: true
+  # _pages 부분
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
