--- a/_config.yml
+++ b/_config.yml
@@ -283,9 +283,9 @@ compress_html:
 
 # Defaults
 defaults:
-  # _posts
+ # _posts
   - scope:
-      path: ""
+      path: "_posts"
       type: posts
     values:
       layout: single
