--- a/_config.yml
+++ b/_config.yml
@@ -285,13 +285,13 @@ compress_html:
 defaults:
  # _posts
   - scope:
-      path: "_posts"
+      path: ""
       type: posts
     values:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
+      comments: true
       share: true
       related: true
   # _pages 부분입니다.
