--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,11 @@ locale                   : "ko-KR"
 title                    : "BYEONG-HEON KANG"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "ByeongHeon Kang"
-description              : "daily"
-url                      : "https://ariels1996.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : "BYEONGHEON KANG"
+description              : "Let's study"
+url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : "ariels1996/ariels1996.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -65,8 +65,8 @@ reCaptcha:
   secret                 :
 atom_feed:
   path                   : # blank (default) uses feed.xml
-search                   : true # true, false (default)
-search_full_content      : true # true, false (default)
+search                   : # true, false (default)
+search_full_content      : # true, false (default)
 search_provider          : # lunr (default), algolia, google
 algolia:
   application_id         : # YOUR_APPLICATION_ID
@@ -107,10 +107,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "ByeongHeon Kang"
+  name             : "Your Name"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Blockchain student."
-  location         : "Seoul, S.Korea"
+  bio              : "I am an amazing person."
+  location         : "Somewhere"
   email            :
   links:
     - label: "Email"
@@ -283,7 +283,7 @@ compress_html:
 
 # Defaults
 defaults:
- # _posts
+  # _posts
   - scope:
       path: ""
       type: posts
@@ -294,10 +294,11 @@ defaults:
       comments: true
       share: true
       related: true
+      
   # _pages 부분입니다.
-    - scope:
-        path: "_pages"
-        type: pages
-      values:
-        layout: single
-        author_profile: true
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
