--- a/_config.yml
+++ b/_config.yml
@@ -107,11 +107,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Byeongheon Kang"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Somewhere"
-  email            :
+  bio              : "Student, studying Blockchain."
+  location         : "Seoul,S.korea"
+  email            : kbh122369@gmail.com
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
