update bio & dependency

--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "Byeongheon Kang"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Student, studying Blockchain."
+  bio              : "Student, Bachelor of Science in CS."
   location         : "Seoul,S.korea"
   email            : kbh122369@gmail.com
   links:
