add til category

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,8 @@
 main:
   - title: "Archive"
     url: /year-archive/
+  - title: "TIL"
+    url: /categories/til
   - title: "Tag"
     url: /tags/
   - title: "Category"
