--- a/.gitignore
+++ b/.gitignore
@@ -1,81 +1,32 @@
-### Jekyll ###
-_site
-.sass-cache
-.jekyll-metadata
-Gemfile.lock
-
-
-### Gulp ###
-package.json
-/node_modules/
-
-
-### Atom ###
-.ftpconfig
-.sftpconfig
-
-
-### Compiled Source ###
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
-
-
-### Compressed Packages ###
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
-
-
-### Logs and Databases ###
-*.log
-*.sql
-*.sqlite
-
-
-### Linux ###
+# Vim
 *~
-.fuse_hidden*
-.Trash-*
-.nfs*
+*.sw[p_]
 
+# IntelliJ IDEA
+*.idea
 
-### MacOS ###
-*.DS_Store
-.AppleDouble
-.LSOverride
-Icon
-._*
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
 
+# Ruby Gem
+*.gem
+.bundle
+Gemfile.lock
+**/vendor/bundle
 
-### Windows ###
-Thumbs.db
-ehthumbs.db
-ehthumbs_vista.db
-Desktop.ini
-$RECYCLE.BIN/
-*.cab
-*.msi
-*.msm
-*.msp
-*.lnk
+# Node.js and NPM
+node_modules
+npm-debug.log*
+package-lock.json
+codekit-config.json
+
+# macOS
+.DS_Store
+
+# Jekyll generated files
+.jekyll-cache
+.jekyll-metadata
+.sass-cache
+_asset_bundler_cache
+_site
