--- a/_config.yml
+++ b/_config.yml
@@ -16,12 +16,12 @@ minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "devtrail"
+title                    : "devtrail42"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "BYEONGHEON KANG"
 description              : "til I learn"
-url                      : "https://devtrail.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://devtrail42.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -32,7 +32,7 @@ words_per_minute         : 200
 comments:
   provider               : "disqus" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
   disqus:
-    shortname            : devtrail # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
+    shortname            : devtrail42 # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
     server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
   facebook:
