--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "devtrail42"
+title                    : "Til I Learn"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "BYEONGHEON KANG"
