--- a/_config.yml
+++ b/_config.yml
@@ -77,10 +77,10 @@ google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
   instant_search         : # false (default), true
 # SEO Related
-google_site_verification :
+google_site_verification : a8Go4aO_sotVxEoruykZZripUyOZPx09-2DVtAhr7RU
 bing_site_verification   :
 yandex_site_verification :
-naver_site_verification  :
+naver_site_verification  : f7e19c89b77a65b1dc4b13d102f29295a36c9540
 
 # Social Sharing
 twitter:
